html homepage - solo struttura

--- a/index.html
+++ b/index.html
@@ -5,23 +5,117 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Archivio Studio Boggeri</title>
 </head>
+
 <body>
+    <!-- Logo e Nav principale -->
    <header>
-    <h1>Ciao 23</h1>
-    <nav>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Ci siamo</a></li>
-            <li><a href="#">Contatti</a></li>
-            <li><a href="#">About</a></li>
-        </ul>
-    </nav>
-   </header>
+        <p><a href="index.html">Archivio Studio Boggeri</a></p>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Designer</a></li>
+                <li><a href="#">Progetti</a></li>
+                <li><a href="#">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Hero img e testo -->
+    <section class="hero">
+        <img src="" alt="">
+        <p></p>
+    </section>
+
    <main>
-    <section></section>
-   </main>
+    <!-- Sezione che parla dello studio, con img e testo -->
+    <section class="studio">
+        <div class="testo">
+            <h2></h2>
+            <p></p>
+        </div>
+
+        <div class="immagine">
+            <img src="" alt="">
+        </div>
+    </section>
+
+    <!-- Card Designer -->
+    <section class="designer">
+        <h2>I PROTAGONISTI</h2>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <h3></h3>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <h3></h3>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <h3></h3>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <h3></h3>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <h3></h3>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <h3></h3>
+        </div>
+
+        <button type="button">Scopri di più</button>
+    </section>
+
+    <!-- Card Progetti -->
+    <section class="progetti">
+        <h2>I PROGETTI</h2>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <p></p>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <p></p>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <p></p>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <p></p>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <p></p>
+        </div>
+
+        <div class="card">
+            <a href=""> <img src="" alt=""> </a>
+            <p></p>
+        </div>
+
+        <button type="button">Scopri di più</button>
+    </section>
+    </main>
+
    <footer></footer>
 </body>
 </html>
