--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Designers Studio Boggeri</title>
 </head>
 
 <body>
     <!-- Logo e Nav principale -->
    <header>
-        <p><a href="index.html">Designers Studio Boggeri</a></p>
+        <h1 class="logo"><a href="index.html"><strong>Designers Studio Boggeri</strong></a></h1>
         <nav>
             <ul>
                 <li><a href="studio.html">Studio</a></li>
@@ -26,7 +26,6 @@
    <main>
         <!-- Card Progetti -->
         <section class="progetti">
-            <h2>I PROGETTI</h2>
     
             <div class="card">
                 <a href=""> <img src="/immagini/milani/napoli-milani.png" alt=""> </a>
@@ -116,13 +115,13 @@
     </main>
 
    <footer>
-    <p><a href="index.html">Designers Studio Boggeri</a></p>
+    <p class="logo"><a href="index.html">Designers Studio Boggeri</a></p>
     <nav>
         <ul>
-            <li><a href="#">Studio</a></li>
-            <li><a href="#">Designer</a></li>
-            <li><a href="#">Progetti</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="studio.html">Studio</a></li>
+            <li><a href="designers.html">Designer</a></li>
+            <li><a href="projects.html">Progetti</a></li>
+            <li><a href="about.html">About</a></li>
         </ul>
     </nav>
    </footer>
