--- a/studio.html
+++ b/studio.html
@@ -4,9 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Studio</title>
 </head>
 <body>
-    
+    <!-- Logo e Nav principale -->
+    <header>
+        <h1 class="logo"><a href="index.html">Designers Studio Boggeri</a></p>
+        <nav>
+            <ul>
+                <li><a href="studio.html">Studio</a></li>
+                <li><a href="designers.html">Designer</a></li>
+                <li><a href="projects.html">Progetti</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="studio">
+        <div class="testo">
+            <h2>Lo Studio</h2>
+            <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
+                Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
+                </p>     
+        </div>
+
+        <div class="immagine">
+            <img src="/immagini/download.png" alt="">
+        </div>
+    </section>
+
+    <section class="studio">
+        <div class="immagine">
+            <img src="/immagini/download.png" alt="">
+        </div>
+
+        <div class="testo">
+            <h2>Lo Studio</h2>
+            <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
+                Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
+                </p>     
+        </div>
+    </section>
+
+    <footer>
+        <p><a href="index.html">Designers Studio Boggeri</a></p>
+        <nav>
+            <ul>
+                <li><a href="studio.html">Studio</a></li>
+                <li><a href="designers.html">Designer</a></li>
+                <li><a href="projects.html">Progetti</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 </html>
