--- a/designers.html
+++ b/designers.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <title>Designers</title>
 </head>
 <body>
+<!-- Logo e Nav principale -->
+    <header>
+        <h1 class="logo"><a href="index.html">Designers Studio Boggeri</a></p>
+        <nav>
+            <ul>
+                <li><a href="studio.html">Studio</a></li>
+                <li><a href="designers.html">Designer</a></li>
+                <li><a href="projects.html">Progetti</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
 
-            <!-- Logo e Nav principale -->
-            <header>
-                <p><a href="index.html">Designers Studio Boggeri</a></p>
-                <nav>
-                    <ul>
-                        <li><a href="studio.html">Studio</a></li>
-                        <li><a href="designers.html">Designer</a></li>
-                        <li><a href="projects.html">Progetti</a></li>
-                        <li><a href="about.html">About</a></li>
-                    </ul>
-                </nav>
-            </header>
-
-            <h2>I DESIGNERS</h2>
+<h2>DESIGNERS</h2>
     
             <div class="card">
                 <a href=""> <img src="/immagini/designer/albe-steiner-foto.jpg" alt=""></a>
@@ -52,6 +52,17 @@
                 <a href=""> <img src="/immagini/designer/Munari.jpg" alt=""> </a>
                 <h3>Bruno Munari</h3>
             </div>
-
+            
+            <footer>
+                <p><a href="index.html">Designers Studio Boggeri</a></p>
+                <nav>
+                    <ul>
+                        <li><a href="studio.html">Studio</a></li>
+                        <li><a href="designers.html">Designer</a></li>
+                        <li><a href="projects.html">Progetti</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
+                </nav>
+               </footer>
 </body>
 </html>
