--- a/projects.html
+++ b/projects.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Progetti</title>
 </head>
 <body>
+    <!-- Logo e Nav principale -->
+    <header>
+        <h1 class="logo"><a href="index.html">Designers Studio Boggeri</a></p>
+        <nav>
+            <ul>
+                <li><a href="studio.html">Studio</a></li>
+                <li><a href="designers.html">Designer</a></li>
+                <li><a href="projects.html">Progetti</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <h2>PROGETTI</h2>
     
     <div class="card">
@@ -38,5 +52,17 @@
         <a href=""> <img src="/immagini/steiner/pirelli-adv-steiner.png" alt=""> </a>
         <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Advertising </p>
     </div>
+
+    <footer>
+        <p><a href="index.html">Designers Studio Boggeri</a></p>
+        <nav>
+            <ul>
+                <li><a href="studio.html">Studio</a></li>
+                <li><a href="designers.html">Designer</a></li>
+                <li><a href="projects.html">Progetti</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+       </footer>
 </body>
 </html>
