--- a/projects.html
+++ b/projects.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Logo e Nav principale -->
     <header>
-        <h1 class="logo"><a href="index.html">Designers Studio Boggeri</a></p>
+        <h1 class="logo"><a href="index.html"><strong>Designers Studio Boggeri</strong></a></h1>
         <nav>
             <ul>
                 <li><a href="studio.html">Studio</a></li>
