--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Logo e Nav principale -->
    <header>
-        <h1 class="logo"><a href="index.html"><strong>Designers Studio Boggeri</strong></a></h1>
+        <h1 class="logo"><a href="index.html">Designers Studio Boggeri</a></h1>
         <nav>
             <ul>
                 <li><a href="studio.html">Studio</a></li>
@@ -57,9 +57,9 @@
                     <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Advertising </p>
                 </div>
             </div>
-    
-            <button class="button" type="button">Scopri di più</button>
-
+            <div class="cta">
+                <a href="projects.html"><button class="button" type="button">Scopri i Progetti</button></a>
+            </div>
         </section>
 
     <!-- Sezione che parla dello studio, con img e testo -->
@@ -76,8 +76,9 @@
                 <img src="/immagini/download.png" alt="">
             </div>
         </div>
-
-        <button class="button" type="button">Scopri lo Studio</button>
+        <div class="cta">
+            <a href="studio.html"><button class="button" type="button">Scopri lo Studio</button></a>
+        </div>
     </section>
 
     <!-- Card Designer -->
@@ -86,37 +87,38 @@
         <h2>I DESIGNERS</h2>
         <div class="grid1">
             <div class="card">
-                <a href=""> <img src="/immagini/designer/albe-steiner-foto.jpg" alt=""></a>
+                <a href=""> <img src="/immagini/designer/albe-steiner-foto.png" alt=""></a>
                 <h3>Albe Steiner</h3>
             </div>
 
             <div class="card">
-                <a href=""> <img src="/immagini/designer/erberto_carboni_foto.webp" alt=""> </a>
+                <a href=""> <img src="/immagini/designer/erberto_carboni_foto.png" alt=""> </a>
                 <h3>Erberto Carboni</h3>
             </div>
 
             <div class="card">
-                <a href=""> <img src="/immagini/designer/franco-grignani-foto.jpg" alt=""> </a>
+                <a href=""> <img src="/immagini/designer/franco-grignani-foto.png" alt=""> </a>
                 <h3>Franco Grignani</h3>
             </div>
 
             <div class="card">
-                <a href=""> <img src="/immagini/designer/max-huber.jpeg" alt=""> </a>
+                <a href=""> <img src="/immagini/designer/max-huber.png" alt=""> </a>
                 <h3>Max Huber</h3>
             </div>
 
             <div class="card">
-                <a href=""> <img src="/immagini/designer/walter-ballmer-foto.jpeg" alt=""> </a>
+                <a href=""> <img src="/immagini/designer/walter-ballmer-foto.png" alt=""> </a>
                 <h3>Walter Ballmer</h3>
             </div>
 
             <div class="card">
-                <a href=""> <img src="/immagini/designer/Munari.jpg" alt=""> </a>
+                <a href=""> <img src="/immagini/designer/Munari.png" alt=""> </a>
                 <h3>Bruno Munari</h3>
             </div>
         </div>
-
-        <button class="button" type="button">Scopri di più</button>
+        <div class="cta">
+            <a href="designers.html"><button class="button" type="button">Scopri i Designers</button></a>
+        </div>
     </section>
     </main>
 
