--- a/studio.html
+++ b/studio.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Logo e Nav principale -->
     <header>
-        <h1 class="logo"><a href="index.html"><strong>Designers Studio Boggeri</strong></a></h1>
+        <h1 class="logo"><a href="index.html">Designers Studio Boggeri</a></h1>
         <nav>
             <ul>
                 <li><a href="studio.html">Studio</a></li>
@@ -22,28 +22,32 @@
     </header>
 
     <section class="studio">
-        <div class="testo">
-            <h2>Lo Studio</h2>
-            <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
-                Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
-                </p>     
-        </div>
+        <div class="flex">
+            <div class="testo">
+                <h4>Lo Studio</h4>
+                <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
+                    Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
+                    </p>     
+            </div>
 
-        <div class="immagine">
-            <img src="/immagini/download.png" alt="">
+            <div class="immagine-studio">
+                <img src="/immagini/logo studio.png" alt="">
+            </div>
         </div>
     </section>
 
     <section class="studio">
-        <div class="immagine">
-            <img src="/immagini/download.png" alt="">
-        </div>
+        <div class="flex">
+            <div class="immagine-studio">
+                <img src="/immagini/download.png" alt="">
+            </div>
 
-        <div class="testo">
-            <h2>Lo Studio</h2>
-            <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
-                Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
-                </p>     
+            <div class="testo">
+                <h4>Lo Studio</h4>
+                <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
+                    Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
+                    </p>     
+            </div>
         </div>
     </section>
 
