--- a/studio.html
+++ b/studio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Studio</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
             </div>
 
             <div class="immagine-studio">
-                <img src="/immagini/logo studio.png" alt="">
+                <img src="immagini/logo studio.png" alt="">
             </div>
         </div>
     </section>
@@ -39,7 +39,7 @@
     <section class="studio">
         <div class="flex">
             <div class="immagine-studio">
-                <img src="/immagini/download.png" alt="">
+                <img src="immagini/download.png" alt="">
             </div>
 
             <div class="testo">
