pagine progetti steiner

--- a/designers.html
+++ b/designers.html
@@ -28,32 +28,32 @@
 
     <h2>I DESIGNERS</h2>
     <div class="grid1">
-        <div class="card">
+        <div class="card1">
             <a href=""> <img src="immagini/designer/albe-steiner-foto.png" alt=""></a>
             <h3>Albe Steiner</h3>
         </div>
 
-        <div class="card">
+        <div class="card1">
             <a href=""> <img src="immagini/designer/erberto_carboni_foto.png" alt=""> </a>
             <h3>Erberto Carboni</h3>
         </div>
 
-        <div class="card">
+        <div class="card1">
             <a href=""> <img src="immagini/designer/franco-grignani-foto.png" alt=""> </a>
             <h3>Franco Grignani</h3>
         </div>
 
-        <div class="card">
+        <div class="card1">
             <a href=""> <img src="immagini/designer/max-huber.png" alt=""> </a>
             <h3>Max Huber</h3>
         </div>
 
-        <div class="card">
+        <div class="card1">
             <a href=""> <img src="immagini/designer/walter-ballmer-foto.png" alt=""> </a>
             <h3>Walter Ballmer</h3>
         </div>
 
-        <div class="card">
+        <div class="card1">
             <a href=""> <img src="immagini/designer/Munari.png" alt=""> </a>
             <h3>Bruno Munari</h3>
         </div>
