--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
                 </div>
         
                 <div class="card">
-                    <a href=""> <img src="immagini/steiner/cnl-steiner-poster.png" alt=""> </a>
+                    <a href="progetti/steiner1.html"> <img src="immagini/steiner/cnl-steiner-poster.png" alt=""> </a>
                     <p> <strong>Mostra della Ricostruzione</strong> <br>Albe Steiner, 1945 <br>Poster  </p>
                 </div>
         
                 <div class="card">
-                    <a href=""> <img src="immagini/steiner/pirelli-adv-steiner.png" alt=""> </a>
+                    <a href="/progetti/steiner2.html"> <img src="immagini/steiner/pirelli-adv-steiner.png" alt=""> </a>
                     <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Advertising </p>
                 </div>
             </div>
