--- a/studio.html
+++ b/studio.html
@@ -24,7 +24,7 @@
     <section class="studio">
         <div class="flex">
             <div class="testo">
-                <h4>Lo Studio</h4>
+                <h2>Lo Studio</h2>
                 <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
                     Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
                     </p>     
@@ -39,11 +39,11 @@
     <section class="studio">
         <div class="flex">
             <div class="immagine-studio">
-                <img src="immagini/download.png" alt="">
+                <img src="immagini/pngstudio.png" alt="">
             </div>
 
             <div class="testo">
-                <h4>Lo Studio</h4>
+                <h2>Lo Studio</h2>
                 <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
                     Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
                     </p>     
