--- a/designers.html
+++ b/designers.html
@@ -29,7 +29,7 @@
     <h2>I DESIGNERS</h2>
     <div class="grid1">
         <div class="card1">
-            <a href=""> <img src="immagini/designer/albe-steiner-foto.png" alt=""></a>
+            <a href="/designers/steiner.html"> <img src="immagini/designer/albe-steiner-foto.png" alt=""></a>
             <h3>Albe Steiner</h3>
         </div>
 
