--- a/about.html
+++ b/about.html
@@ -21,6 +21,36 @@
         </nav>
     </header>
 
+    <main>
+
+
+        <section class="testo-progetto">
+            <h2>About</h2>
+            <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
+                Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+        </section>
+
+        <section class="email">
+            <p>ewifwoehow@gmail.com</p>
+            <p>ewifwoehow@gmail.com</p>
+            <p>ewifwoehow@gmail.com</p>
+        </section>
+    </main>
+
+    <footer>
+        <p><a href="index.html">Designers Studio Boggeri</a></p>
+        <nav>
+            <ul>
+                <li><a href="studio.html">Studio</a></li>
+                <li><a href="designers.html">Designer</a></li>
+                <li><a href="projects.html">Progetti</a></li>
+                <li><a href="about.html">About</a></li>
+            </ul>
+        </nav>
+    </footer>
+
     
 </body>
 </html>
