--- a/designers/steiner.html
+++ b/designers/steiner.html
@@ -27,8 +27,7 @@
             <div class="flex">
                 <div class="testo">
                     <h2>Albe Steiner</h2>
-                    <p>Fondata nel 1933 da Antonio Boggeri a Milano. Lo Studio Boggeri è un capolavoro nella storia del graphic design, uno dei migliori e più importanti studi di design al mondo. 
-                        Ha collegato la grafica italiana e svizzera come nessuno ha fatto prima di portare i principi moderni alla progettazione grafica. 
+                    <p>Nasce a Milano, Lombardia, 1913. Dopo gli studi di ragioneria inizia a lavorare come grafico nei primi anni '30, collaborando con lo Studio Boggeri e partecipando alla mostra della Triennale. Dal 1939 fu aiutato dalla moglie Lica. Dopo un viaggio negli Stati Uniti, si unì alla Resistenza e disegnò una serie di opuscoli e periodici clandestini. Nel 1945 progetta La Mostra della Ricostruzione e la rivista comunista Il Politecnico. Dopo la guerra trascorse due anni in Messico per una campagna di alfabetizzazione. Tornato a Milano è nominato direttore artistico de La Rinascente (1950-54), e lavora per Coop, Necchi, Olivetti, Piccolo Teatro, Pirelli e altre grandi aziende. Ha lavorato molto in campo editoriale, disegnando molte copertine e collane per Editori Riuniti, Feltrinelli, Zanichelli e altri editori, scrivendo lui stesso alcuni libri. Socio fondatore dell'ADI. Membro dell'AGI e dell'ICTA. Ha insegnato presso le scuole ANPI Rinascita e Umanitaria di Milano, e ha tenuto corsi e conferenze presso l'Università di Venezia e gli istituti d'arte di Parma, Urbino, Roma e Firenze. Muore a Raffadali, in Sicilia, nel 1974.
                         </p>     
                 </div>
 
