--- a/studio.html
+++ b/studio.html
@@ -38,7 +38,7 @@
 
     <section class="studio">
         <div class="flex">
-            <div class="immagine-studio">
+            <div class="immagine-studio2">
                 <img src="immagini/pngstudio.png" alt="">
             </div>
 
