--- a/designers.html
+++ b/designers.html
@@ -57,6 +57,68 @@
             <a href=""> <img src="immagini/designer/Munari.png" alt=""> </a>
             <h3>Bruno Munari</h3>
         </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/milani.png" alt=""> </a>
+            <h3>Armando Milani</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/lamm.png" alt=""> </a>
+            <h3>Lora Lamm</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/calabresi.png" alt=""> </a>
+            <h3>Aldo Calabresi</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/vivarelli.png" alt=""> </a>
+            <h3>Carlo Vivarelli</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/muratore.png" alt=""> </a>
+            <h3>Remo Muratore</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/schawinsky.png" alt=""> </a>
+            <h3>Xanti Schawinsky</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/noorda.png" alt=""> </a>
+            <h3>Bob Noorda</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/enzo-mari.png" alt=""> </a>
+            <h3>Enzo Mari</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/sambonet.png" alt=""> </a>
+            <h3>Roberto Sambonet</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/ilimprandi.png" alt=""> </a>
+            <h3>Giancarlo Iliprandi</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/monguzzi.png" alt=""> </a>
+            <h3>Bruno Monguzzi</h3>
+        </div>
+
+        <div class="card1">
+            <a href=""> <img src="immagini/designer/nizzoli.png" alt=""> </a>
+            <h3>Marcello Nizzoli</h3>
+        </div>
+
+
     </div>
 </section>
 </main>
