--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
             <div class="card1">
-                <a href=""> <img src="immagini/designer/erberto_carboni_foto.png" alt=""> </a>
+                <a href="designers/carboni.html"> <img src="immagini/designer/erberto_carboni_foto.png" alt=""> </a>
                 <h3>Erberto Carboni</h3>
             </div>
 
