--- a/progetti/steiner4.html
+++ b/progetti/steiner4.html
@@ -24,10 +24,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Coop 1</h2>
-    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+    <p>Locandina per il primo negozio alimentare Coop aperto a Reggio Emilia, Emilia-Romagna. L'intera identità, compreso il logotipo, è stata disegnata da Albe Steiner.</p>
     </section>
     
     
