--- a/progetti/steiner5.html
+++ b/progetti/steiner5.html
@@ -24,10 +24,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Interiors</h2>
-    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+    <p>Copertina della rivista americana Interiors+Industrial Design che mostra una silhouette-illustrazione di quella che sembra la Pamio Lounge Chair di Alvar Aalto (1931-32). La copertina è caratterizzata da un forte impatto visivo ottenuto utilizzando forme semplici e pochi colori decisi (forma rossa, dettagli bianchi, sfondo nero). Disegnata da Steiner durante il suo breve soggiorno in Messico, pochi mesi prima del rientro in Italia. </p>
     </section>
     
     
