--- a/progetti/steiner6.html
+++ b/progetti/steiner6.html
@@ -24,10 +24,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Compasso d'Oro</h2>
-    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+    <p>Nato da un’idea di Gio Ponti e e con il sostegno dei grandi magazzini la Rinascente, (era infatti denominato “la Rinascente – Compasso d’Oro”) è stato il primo premio del settore in Europa, ed ha lo scopo di mettere in valore la qualità del design italiano. Il logo disegnato allora da Albe Steiner su commissione della Rinascente e rimasto immutato, è diventato oggi un marchio inconfondibile di qualità e rigore. Nel 1959 il Premio venne donato all’ADI e gestito in collaborazione tra la Rinascente e l’associazione, con giurie nominate in comune; da questa data il premio fu attribuito non più all’estetica del prodotto ma esplicitamente al “disegno industriale”.</p>
     </section>
     
     
