--- a/progetti/steiner1.html
+++ b/progetti/steiner1.html
@@ -24,10 +24,7 @@
 <main>
     <section class="testo-progetto">
     <h2>Mostra della Ricostruzione</h2>
-    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+    <p>Le devastazioni della guerra e i lavori di ricostruzione sono ben illustrati da un tricolore spezzato (la bandiera italiana) in primo piano e dai piloni inclinati sullo sfondo. Tutto è enfatizzato da una tipografia traballante. Progettato per la Mostra della Ricostruzione tenutasi a Palazzo dell'Arengario in Piazza Duomo, Milano. La mostra è stata curata e progettata dall'architetto Vico Magistretti e dallo stesso Albe Steiner. Steiner ha anche progettato cartelloni pubblicitari simili in diverse dimensioni.</p>
     </section>
     
     
