--- a/progetti/steiner3.html
+++ b/progetti/steiner3.html
@@ -24,10 +24,7 @@
 <main>
     <section class="testo-progetto">
     <h2>T14</h2>
-    <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.
-        Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est.</p>
+    <p>Uno dei manifesti più essenziali e allo stesso tempo impattanti della storia della grafica italiana. Manifesto ufficiale della 14° mostra della Triennale di Milano, riporta il segno geometrico dell'evento (una T positiva e un 14 negativo), che qui diventa una sorta di bellissimo quadro astratto. I testi sono stampati in rosso, da sempre considerato il secondo colore tipografico per eccellenza dopo il nero, sia per differenziarli dal segno sia per valorizzarne l'impaginazione. Anche una serie di poster colorati è stata disegnata da Steiner. Inedito su internet.</p>
     </section>
     
     
