--- a/projects.html
+++ b/projects.html
@@ -64,6 +64,56 @@
                 <a href="/progetti/steiner2.html"> <img src="immagini/steiner/pirelli-adv-steiner.png" alt=""> </a>
                 <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Advertising </p>
             </div>
+
+            <div class="card">
+                <a href="/progetti/steiner3.html"> <img src="/immagini/steiner/t14-steiner.png" alt=""> </a>
+                <p> <strong>T14 </strong><br>Albe Steiner, 1968 <br>Serie di poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/steiner4.html"> <img src="/immagini/steiner/coop-steiner.png" alt=""> </a>
+                <p> <strong>Coop 1 </strong><br>Albe Steiner, 1963 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/steiner5.html"> <img src="/immagini/steiner/interiors-steiner.png" alt=""> </a>
+                <p> <strong>Interiors </strong><br>Albe Steiner, 1948 <br>Periodico </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/steiner6.html"> <img src="/immagini/steiner/ORO.jpg" alt=""> </a>
+                <p> <strong>Compasso d'Oro </strong><br>Albe Steiner, 1954 <br>Marchio </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/carboni1.html"> <img src="/immagini/carboni/carboni1.png" alt=""> </a>
+                <p> <strong>Domus n.310</strong><br>Erberto Carboni, 1955 <br>Copertina </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/carboni2.html"> <img src="/immagini/carboni/carboni2.jpg" alt=""> </a>
+                <p> <strong>Crociere Italia</strong><br>Erberto Carboni, 1937 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/carboni3.html"> <img src="/immagini/carboni/carboni3.jpg" alt=""> </a>
+                <p> <strong>Vera pasta all'uovo </strong><br>Erberto Carboni, 1953 <br>Advertising </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/carboni4.html"> <img src="/immagini/carboni/carboni4.jpg" alt=""> </a>
+                <p> <strong>RAI </strong><br>Erberto Carboni, 1959 <br>Advertising </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/carboni5.html"> <img src="/immagini/carboni/carboni5.jpg" alt=""> </a>
+                <p> <strong>Lotteria di Monza</strong><br>Erberto Carboni, 1956 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/carboni6.html"> <img src="/immagini/carboni/carboni6.jpg" alt=""> </a>
+                <p> <strong>La pasta del buon appetito </strong><br>Erberto Carboni, 1952 <br>Advertising </p>
+            </div>
         </div>
     </section>
 
