--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
 
             <div class="card1">
-                <a href=""> <img src="immagini/designer/max-huber.png" alt=""> </a>
+                <a href="designers/huber.html"> <img src="immagini/designer/max-huber.png" alt=""> </a>
                 <h3>Max Huber</h3>
             </div>
 
