--- a/projects.html
+++ b/projects.html
@@ -114,6 +114,37 @@
                 <a href="/progetti/carboni6.html"> <img src="/immagini/carboni/carboni6.jpg" alt=""> </a>
                 <p> <strong>La pasta del buon appetito </strong><br>Erberto Carboni, 1952 <br>Advertising </p>
             </div>
+
+            <div class="card">
+                <a href="/progetti/huber1.html"> <img src="/immagini/huber/huber1.jpg" alt=""> </a>
+                <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/huber2.html"> <img src="/immagini/huber/huber2.jpg" alt=""> </a>
+                <p> <strong>Autodromo di Monza</strong><br>Max Huber, 1948 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/huber3.html"> <img src="/immagini/huber/huber3.jpg" alt=""> </a>
+                <p> <strong>La Rinascente </strong><br>Max Huber, 1950 <br>Packaging </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/huber4.html"> <img src="/immagini/huber/huber4.jpg" alt=""> </a>
+                <p> <strong>Jazztime </strong><br>Max Huber, 1952 <br>Poster</p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/huber5.html"> <img src="/immagini/huber/huber5.png" alt=""> </a>
+                <p> <strong>Coin</strong><br>Max Huber, 1955 <br>Logotype </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/huber6.html"> <img src="/immagini/huber/huber6.jpg" alt=""> </a>
+                <p> <strong>Borsalino </strong><br>Max Huber, 1950 <br>Poster</p>
+            </div>
+            
         </div>
     </section>
 
