--- a/designers/huber.html
+++ b/designers/huber.html
@@ -42,33 +42,33 @@
         <div class="grid">
             
             <div class="card">
-                <a href="/progetti/carboni1.html"> <img src="/immagini/carboni/carboni1.png" alt=""> </a>
-                <p> <strong>Domus n.310</strong><br>Erberto Carboni, 1955 <br>Copertina </p>
+                <a href="/progetti/huber1.html"> <img src="/immagini/huber/huber1.jpg" alt=""> </a>
+                <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/carboni2.html"> <img src="/immagini/carboni/carboni2.jpg" alt=""> </a>
-                <p> <strong>Crociere Italia</strong><br>Erberto Carboni, 1937 <br>Poster </p>
+                <a href="/progetti/huber2.html"> <img src="/immagini/huber/huber2.jpg" alt=""> </a>
+                <p> <strong>Autodromo di Monza</strong><br>Max Huber, 1948 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/carboni3.html"> <img src="/immagini/carboni/carboni3.jpg" alt=""> </a>
-                <p> <strong>Vera pasta all'uovo </strong><br>Erberto Carboni, 1953 <br>Advertising </p>
+                <a href="/progetti/huber3.html"> <img src="/immagini/huber/huber3.jpg" alt=""> </a>
+                <p> <strong>La Rinascente </strong><br>Max Huber, 1950 <br>Packaging </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/carboni4.html"> <img src="/immagini/carboni/carboni4.jpg" alt=""> </a>
-                <p> <strong>RAI </strong><br>Erberto Carboni, 1959 <br>Advertising </p>
+                <a href="/progetti/huber4.html"> <img src="/immagini/huber/huber4.jpg" alt=""> </a>
+                <p> <strong>Jazztime </strong><br>Max Huber, 1952 <br>Poster</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/carboni5.html"> <img src="/immagini/carboni/carboni5.jpg" alt=""> </a>
-                <p> <strong>Lotteria di Monza</strong><br>Erberto Carboni, 1956 <br>Poster </p>
+                <a href="/progetti/huber5.html"> <img src="/immagini/huber/huber5.png" alt=""> </a>
+                <p> <strong>Coin</strong><br>Max Huber, 1955 <br>Logotype </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/carboni6.html"> <img src="/immagini/carboni/carboni6.jpg" alt=""> </a>
-                <p> <strong>La pasta del buon appetito </strong><br>Erberto Carboni, 1952 <br>Advertising </p>
+                <a href="/progetti/huber6.html"> <img src="/immagini/huber/huber6.jpg" alt=""> </a>
+                <p> <strong>Borsalino </strong><br>Max Huber, 1950 <br>Poster</p>
             </div>
         </div>
     </section>
