--- a/designers.html
+++ b/designers.html
@@ -39,22 +39,22 @@
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/franco-grignani-foto.png" alt=""> </a>
+            <a href="designers/grignani.html"> <img src="immagini/designer/franco-grignani-foto.png" alt=""> </a>
             <h3>Franco Grignani</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/max-huber.png" alt=""> </a>
+            <a href="designers/huber.html"> <img src="immagini/designer/max-huber.png" alt=""> </a>
             <h3>Max Huber</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/walter-ballmer-foto.png" alt=""> </a>
+            <a href="designers/ballmer.html"> <img src="immagini/designer/walter-ballmer-foto.png" alt=""> </a>
             <h3>Walter Ballmer</h3>
         </div>
 
         <div class="card1">
-            <a href=""> <img src="immagini/designer/Munari.png" alt=""> </a>
+            <a href="designers/munari.html"> <img src="immagini/designer/Munari.png" alt=""> </a>
             <h3>Bruno Munari</h3>
         </div>
 
