--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
 
             <div class="card1">
-                <a href=""> <img src="immagini/designer/franco-grignani-foto.png" alt=""> </a>
+                <a href="designers/grignani.html"> <img src="immagini/designer/franco-grignani-foto.png" alt=""> </a>
                 <h3>Franco Grignani</h3>
             </div>
 
@@ -107,12 +107,12 @@
             </div>
 
             <div class="card1">
-                <a href=""> <img src="immagini/designer/walter-ballmer-foto.png" alt=""> </a>
+                <a href="designers/ballmer.html"> <img src="immagini/designer/walter-ballmer-foto.png" alt=""> </a>
                 <h3>Walter Ballmer</h3>
             </div>
 
             <div class="card1">
-                <a href=""> <img src="immagini/designer/Munari.png" alt=""> </a>
+                <a href="designers/munari.html"> <img src="immagini/designer/Munari.png" alt=""> </a>
                 <h3>Bruno Munari</h3>
             </div>
         </div>
