--- a/designers/ballmer.html
+++ b/designers/ballmer.html
@@ -42,18 +42,18 @@
         <div class="grid">
             
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/ballmer/ballmer1.jpg" alt=""> </a>
-                <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Poster </p>
+                <a href="/progetti/ballmer1.html"> <img src="/immagini/ballmer/ballmer1.jpg" alt=""> </a>
+                <p> <strong>Stile Olivetti</strong><br>Walter Ballmer, 1961 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/ballmer/ballmer2.webp" alt=""> </a>
-                <p> <strong>Autodromo di Monza</strong><br>Max Huber, 1948 <br>Poster </p>
+                <a href="/progetti/ballmer2.html"> <img src="/immagini/ballmer/ballmer2.webp" alt=""> </a>
+                <p> <strong>Lettera 32</strong><br>Walter Ballmer, 1968 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/ballmer/ballmer3.jpg" alt=""> </a>
-                <p> <strong>La Rinascente </strong><br>Max Huber, 1950 <br>Packaging </p>
+                <a href="/progetti/ballmer3.html"> <img src="/immagini/ballmer/ballmer3.jpg" alt=""> </a>
+                <p> <strong>Olivetti</strong><br>Walter Ballmer, 1975 <br>Poster </p>
             </div>
         </div>
     </section>
