--- a/designers/grignani.html
+++ b/designers/grignani.html
@@ -26,7 +26,7 @@
         <section class="hero-designer">
             <div class="flex">
                 <div class="testo">
-                    <h2>Franco Grignani/h2>
+                    <h2>Franco Grignani</h2>
                     <p>  Nato a Pieve Porto Morone, Lombardia, 1908. Artista, designer e fotografo. Studiò architettura e divenne un esponente di spicco della seconda ondata del Futurismo. Negli anni '30 fonda lo Studio Grignani e inizia a collaborare come disegnatore pubblicitario con Domus, Dompé, Mondadori, Montecatini e Alfieri & Lacroix per i quali disegna numerose campagne. Grignani è stato il maestro indiscusso della ricerca ottica nel graphic design e la sua azienda è stata l'unica vera concorrente dello Studio Boggeri fino ai primi anni '60. Art director di Pubblicità in Italia annuali da ventisei anni. Il suo progetto più famoso è il Woolmark. Ha scritto vari saggi e insegnato sia in Italia che negli Stati Uniti Morì a Milano, Lombardia, 1999.</p>     
                 </div>
 
@@ -42,33 +42,33 @@
         <div class="grid">
             
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/grignani/grignani1.jpg" alt=""> </a>
-                <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Poster </p>
+                <a href="/progetti/grignani1.html"> <img src="/immagini/grignani/grignani1.jpg" alt=""> </a>
+                <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Advertising</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/grignani/grignani2.jpg" alt=""> </a>
-                <p> <strong>Autodromo di Monza</strong><br>Max Huber, 1948 <br>Poster </p>
+                <a href="/progetti/grignani2.html"> <img src="/immagini/grignani/grignani2.jpg" alt=""> </a>
+                <p> <strong>Pura Lana Vergine</strong><br>Franco Grignani, 1964 <br>Logotype </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/grignani/grignani3.webp" alt=""> </a>
-                <p> <strong>La Rinascente </strong><br>Max Huber, 1950 <br>Packaging </p>
+                <a href="/progetti/grignani3.html"> <img src="/immagini/grignani/grignani3.webp" alt=""> </a>
+                <p> <strong>L'evoluzione della grafica</strong><br>Frasnco Grignani, 1964 <br>Poster</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/grignani/grignani4.png" alt=""> </a>
-                <p> <strong>Jazztime </strong><br>Max Huber, 1952 <br>Poster</p>
+                <a href="/progetti/grignani4.html"> <img src="/immagini/grignani/grignani4.png" alt=""> </a>
+                <p> <strong>Carte Patinate </strong><br>Franco Grignani, 1965 <br>Catalogue</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/grignani/grignani5.jpg" alt=""> </a>
-                <p> <strong>Coin</strong><br>Max Huber, 1955 <br>Logotype </p>
+                <a href="/progetti/grignani5.html"> <img src="/immagini/grignani/grignani5.jpg" alt=""> </a>
+                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Advertising</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/grignani/grignani6.jpg" alt=""> </a>
-                <p> <strong>Borsalino </strong><br>Max Huber, 1950 <br>Poster</p>
+                <a href="/progetti/grignani6.html"> <img src="/immagini/grignani/grignani6.jpg" alt=""> </a>
+                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Advertising</p>
             </div>
         </div>
     </section>
