--- a/projects.html
+++ b/projects.html
@@ -144,6 +144,81 @@
                 <a href="/progetti/huber6.html"> <img src="/immagini/huber/huber6.jpg" alt=""> </a>
                 <p> <strong>Borsalino </strong><br>Max Huber, 1950 <br>Poster</p>
             </div>
+
+            <div class="card">
+                <a href="/progetti/ballmer1.html"> <img src="/immagini/ballmer/ballmer1.jpg" alt=""> </a>
+                <p> <strong>Stile Olivetti</strong><br>Walter Ballmer, 1961 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/ballmer2.html"> <img src="/immagini/ballmer/ballmer2.webp" alt=""> </a>
+                <p> <strong>Lettera 32</strong><br>Walter Ballmer, 1968 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/ballmer3.html"> <img src="/immagini/ballmer/ballmer3.jpg" alt=""> </a>
+                <p> <strong>Olivetti</strong><br>Walter Ballmer, 1975 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/munari1.html"> <img src="/immagini/munari/munari1.jpg" alt=""> </a>
+                <p> <strong>Ricerca e progettazione di un simbolo</strong><br>Bruno Munari, 1977 <br>Libro </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/munari2.html"> <img src="/immagini/munari/munari2.jpeg" alt=""> </a>
+                <p> <strong>Campari</strong><br>Bruno Munari, 1974 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/munari3.html"> <img src="/immagini/munari/munari3.jpg" alt=""> </a>
+                <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Poster </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/munari4.html"> <img src="/immagini/munari/munari4.jpg" alt=""> </a>
+                <p> <strong>I Satelliti </strong><br>Bruno Munari, 1971 <br>Libro</p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/munari5.html"> <img src="/immagini/munari/munari5.webp" alt=""> </a>
+                <p> <strong>Libri Illegibili</strong><br>Bruno Munari, 1949 <br>Libro </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/munari6.html"> <img src="/immagini/munari/munari6.jpg" alt=""> </a>
+                <p> <strong>Almanacco Anti-Letterario di Bompiani </strong><br>Bruno Munari, 1937 <br>Periodico</p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/grignani1.html"> <img src="/immagini/grignani/grignani1.jpg" alt=""> </a>
+                <p> <strong>FIAT 2800</strong><br>Franco Grignani, 1939 <br>Advertising</p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/grignani2.html"> <img src="/immagini/grignani/grignani2.jpg" alt=""> </a>
+                <p> <strong>Pura Lana Vergine</strong><br>Franco Grignani, 1964 <br>Logotype </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/grignani3.html"> <img src="/immagini/grignani/grignani3.webp" alt=""> </a>
+                <p> <strong>L'evoluzione della grafica</strong><br>Frasnco Grignani, 1964 <br>Packaging </p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/grignani4.html"> <img src="/immagini/grignani/grignani4.png" alt=""> </a>
+                <p> <strong>Carte Patinate </strong><br>Franco Grignani, 1965 <br>Catalogue</p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/grignani5.html"> <img src="/immagini/grignani/grignani5.jpg" alt=""> </a>
+                <p> <strong>Trama e Sintassi</strong><br>Franco Grignani, 1968 <br>Advertising</p>
+            </div>
+
+            <div class="card">
+                <a href="/progetti/grignani6.html"> <img src="/immagini/grignani/grignani6.jpg" alt=""> </a>
+                <p> <strong>Guaiacalcium Efedrina </strong><br>Franco Grignani, 1953 <br>Advertising</p>
+            </div>
             
         </div>
     </section>
