--- a/designers/munari.html
+++ b/designers/munari.html
@@ -42,33 +42,33 @@
         <div class="grid">
             
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/munari/munari1.jpg" alt=""> </a>
-                <p> <strong>La Rinascente</strong><br>Max Huber, 1951 <br>Poster </p>
+                <a href="/progetti/munari1.html"> <img src="/immagini/munari/munari1.jpg" alt=""> </a>
+                <p> <strong>Ricerca e progettazione di un simbolo</strong><br>Bruno Munari, 1977 <br>Libro </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/munari/munari2.jpeg" alt=""> </a>
-                <p> <strong>Autodromo di Monza</strong><br>Max Huber, 1948 <br>Poster </p>
+                <a href="/progetti/munari2.html"> <img src="/immagini/munari/munari2.jpeg" alt=""> </a>
+                <p> <strong>Campari</strong><br>Bruno Munari, 1974 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/munari/munari3.jpg" alt=""> </a>
-                <p> <strong>La Rinascente </strong><br>Max Huber, 1950 <br>Packaging </p>
+                <a href="/progetti/munari3.html"> <img src="/immagini/munari/munari3.jpg" alt=""> </a>
+                <p> <strong>Suole Coria</strong><br>Bruno Munari, 1953 <br>Poster </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/munari/munari4.jpg" alt=""> </a>
-                <p> <strong>Jazztime </strong><br>Max Huber, 1952 <br>Poster</p>
+                <a href="/progetti/munari4.html"> <img src="/immagini/munari/munari4.jpg" alt=""> </a>
+                <p> <strong>I Satelliti </strong><br>Bruno Munari, 1971 <br>Libro</p>
             </div>
 
             <div class="card">
-                <a href="/progetti/"> <img src="/immagini/munari/munari5.webp" alt=""> </a>
-                <p> <strong>Coin</strong><br>Max Huber, 1955 <br>Logotype </p>
+                <a href="/progetti/munari5.html"> <img src="/immagini/munari/munari5.webp" alt=""> </a>
+                <p> <strong>Libri Illegibili</strong><br>Bruno Munari, 1949 <br>Libro </p>
             </div>
 
             <div class="card">
-                <a href="/progetti/huber6.html"> <img src="/immagini/munari/munari6.jpg" alt=""> </a>
-                <p> <strong>Borsalino </strong><br>Max Huber, 1950 <br>Poster</p>
+                <a href="/progetti/munari6.html"> <img src="/immagini/munari/munari6.jpg" alt=""> </a>
+                <p> <strong>Almanacco Anti-Letterario di Bompiani </strong><br>Bruno Munari, 1937 <br>Periodico</p>
             </div>
         </div>
     </section>
