--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                     <p> <strong>Contenitori Pirelli </strong><br>Albe Steiner, 1959 <br>Advertising </p>
                 </div>
             </div>
-            <div class="cta">
-                <a href="projects.html"><button class="button" type="button">Scopri i Progetti</button></a>
+            <div class="cta-container">
+                <a href="projects.html"><button class="button-cta" type="button">Scopri i Progetti</button></a>
             </div>
         </section>
 
@@ -76,8 +76,8 @@
                 <img src="immagini/pngstudio.png" alt="">
             </div>
         </div>
-        <div class="cta">
-            <a href="studio.html"><button class="button" type="button">Scopri lo Studio</button></a>
+        <div class="cta-container">
+            <a href="studio.html"><button class="button-cta" type="button">Scopri lo Studio</button></a>
         </div>
     </section>
 
@@ -116,8 +116,8 @@
                 <h3>Bruno Munari</h3>
             </div>
         </div>
-        <div class="cta">
-            <a href="designers.html"><button class="button" type="button">Scopri i Designers</button></a>
+        <div class="cta-container">
+            <a href="designers.html"><button class="button-cta" type="button">Scopri i Designers</button></a>
         </div>
     </section>
     </main>
